# duet

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  duet.example.yaml  duet.py  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/: BRANCH_PROTECTION.md
.github/workflows/: bump-version.yml  ci.yml  real-loop-canary.yml  release.yml
commands/: duet.md
docs/: AGENT_WORKFLOW.md  CLAUDE_CODE_PLUGIN.md  CODEX_PLUGIN.md  OPENCODE_PLUGIN.md  RELEASING.md  USAGE.md
docs/launch/: awesome-prs.md  demo-script.md  duet-plugin-demo.md  showhn.md
examples/: codex-test-fix.yaml  hello.yaml  pr-review.yaml  repo-compare.yaml  self-review.yaml
plugins/duet-claude/.claude-plugin/: plugin.json
plugins/duet-claude/commands/: duet.md
plugins/duet-opencode/command/: duet.md
plugins/duet/.codex-plugin/: plugin.json
plugins/duet/skills/duet/: SKILL.md
scripts/: bump_release_version.py  check_complexity.py  check_distribution_metadata.py  check_installed_wheel.py  check_reasoning_levels.py  decision_from_transcript.py  duet_loop_e2e.py  smoke.sh
tests/: test_bump_release_version.py  test_control_plane.py  test_duet.py
