[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "duet-cli"
version = "0.2.1"
description = "Two CLI agents in conversation. One Python file. Stdlib only."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Volkan Altan" }]
keywords = ["agents", "cli", "claude", "codex", "llm", "orchestration", "pair-programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml"]

[project.scripts]
duet = "duet:main"

[project.urls]
Homepage = "https://github.com/volkan/duet"
Repository = "https://github.com/volkan/duet"

[tool.setuptools]
py-modules = ["duet"]
